--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,18 @@
         <p id="textSize">Зміна розміру</p>
     </div>
 
+    <!-- 3 завдання -->
+     <div class="box">
+        <h2>Очки: <span id="score">0</span> </h2>
+        <button type="submit" id="btnType">Натисни</button>
+     </div>
+
+     <!-- 4 завдання -->
+      <div class="box">
+        <input type="text" id="inputTime" placeholder="Введіть час у секундах">
+        <button type="submit" id="btnStart">Почати відлік</button>
+      </div>
+
     <script src="./index.js" type="module"></script>
 </body>
 </html>
